fixed overlap with personal progress

--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -53,7 +53,7 @@
 
 .box-test {
   height: 80vh;
-  margin-top: -60vh;
+  margin-top: -55vh;
 }
 
 .personalProgress {
